--- a/subjectA.html
+++ b/subjectA.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTMLの紹介</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src=" " alt=" ">
+    <h1>HTML</h1>
+    <p>HTMLとは「ハイパーテキスト・マークアップ・ランゲージ（Hyper Text Markup Language）」のことで、WEBページを作成するための言語です。 </p>
+    <img src="img/ダウンロード.jpg" alt="HTML">
     
 </body>
 </html>
