ファイルの編集
sabjectBの編集

--- a/subjectB.html
+++ b/subjectB.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>アルゴリズム</title>
 </head>
 <body>
-    <h1></h1>
-    <p></p>
-    <img src=" " alt=" ">
+    <h1>アルゴリズム</h1>
+    <p>.問題を解決するための手順や計算方法」を指す言葉です。 
+        「算法」と呼ばれることもありますが、答えを求めるときの手順を具体的かつ明確に示したものだと言えます。
+        つまり、アルゴリズムとは、その手順に沿っていれば誰でも同じ答えが得られるものを指します。
+    </p>
+    <img src="img/alg.gif" alt="algイメージ">
     
 </body>
 </html>
